--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   syncfusion_flutter_gauges: ^25.2.7
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
