--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,11 @@
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'org.jetbrains.kotlin') {
+            details.useVersion '1.7.1'
+        }
+    }
+}
+
 allprojects {
     repositories {
         google()
