--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   syncfusion_flutter_gauges: ^25.2.7
   http: ^1.2.1
   flutter_vector_icons: ^2.0.0
+  geolocator: ^12.0.0
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
