--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_vector_icons: ^2.0.0
   geolocator: ^12.0.0
   permission_handler: ^11.3.1
+  simple_progress_indicators: ^0.2.0
 
 dev_dependencies:
   flutter_test:
@@ -64,9 +65,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/badges/bad1.png
+    - assets/badges/bad2.png
+    - assets/badges/bad3.png
+    - assets/badges/bad4.png
+    - assets/badges/bad5.png
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
