fix: minor bug fixes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ flutter:
     - assets/items/item1.jpg
     - assets/items/item2.jpg
     - assets/items/item3.jpg
+    - assets/items/item4.jpg
+    - assets/items/item5.jpg
 
     
 
