--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   google_maps_flutter: ^2.7.0
   location: ^6.0.2
   flutter_dotenv: ^5.1.0
+  ml_algo: ^16.17.10
+  csv: ^5.1.1
+  ml_dataframe: ^1.6.0
 
 dev_dependencies:
   flutter_test:
