--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_fonts: ^6.2.1
   csv: ^5.1.1
   ml_dataframe: ^1.6.0
+  ml_preprocessing: ^7.0.2
 
 dev_dependencies:
   flutter_test:
@@ -98,6 +99,7 @@ flutter:
     - assets/ai/hrt.gif
     - assets/ai/watch.png
     - .env
+    - lib/data/housing.csv
 
     
 
