--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   ml_dataframe: ^1.6.0
   ml_preprocessing: ^7.0.2
   path_provider: ^2.1.3
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
