--- a/watch/pubspec.yaml
+++ b/watch/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   ml_preprocessing: ^7.0.2
   path_provider: ^2.1.3
   intl: ^0.19.0
+  flutter_local_notifications: ^17.1.2
 
 dev_dependencies:
   flutter_test:
