--- a/watch/pubspec.yaml
+++ b/watch/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   path_provider: ^2.1.3
   intl: ^0.19.0
   flutter_local_notifications: ^17.1.2
+  web3dart: ^2.7.3
+  web_socket_channel: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -104,6 +106,7 @@ flutter:
     - .env
     - lib/data/datasets.csv
     - lib/backend/classifier.json
+    - src/abis/FitnessApp.json
 
     
 
