--- a/watch/pubspec.yaml
+++ b/watch/pubspec.yaml
@@ -106,7 +106,7 @@ flutter:
     - .env
     - lib/data/datasets.csv
     - lib/backend/classifier.json
-    - src/abis/FitnessApp.json
+    - build/contracts/FitnessApp.json
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
