--- a/watch/pubspec.yaml
+++ b/watch/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   flutter_local_notifications: ^17.1.2
   web3dart: ^2.7.3
   web_socket_channel: ^3.0.0
+  flutter_staggered_grid_view: ^0.7.0
+  fl_chart: ^0.40.0
 
 dev_dependencies:
   flutter_test:
