--- a/watch/pubspec.yaml
+++ b/watch/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   carousel_slider: ^4.2.1
   shared_preferences: ^2.2.3
   google_maps_flutter: ^2.7.0
-  location: ^6.0.2
+  location: ^7.0.0
   flutter_dotenv: ^5.1.0
   sqflite: ^2.3.3+1
   path: ^1.9.0
@@ -60,7 +60,10 @@ dependencies:
   web3dart: ^2.7.3
   web_socket_channel: ^3.0.0
   flutter_staggered_grid_view: ^0.7.0
-  fl_chart: ^0.40.0
+  fl_chart: ^0.68.0
+  firebase_core: ^3.2.0
+  cloud_firestore: ^5.1.0
+  firebase_auth: ^5.1.2
 
 dev_dependencies:
   flutter_test:
@@ -108,7 +111,6 @@ flutter:
     - .env
     - lib/data/datasets.csv
     - lib/backend/classifier.json
-    - src/abis/FitnessApp.json
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
