--- a/watch/pubspec.yaml
+++ b/watch/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   firebase_core: ^3.2.0
   cloud_firestore: ^5.1.0
   firebase_auth: ^5.1.2
+  syncfusion_flutter_charts: ^26.1.42
+  flutter_echarts: ^2.5.0
 
 dev_dependencies:
   flutter_test:
