--- a/watch/pubspec.yaml
+++ b/watch/pubspec.yaml
@@ -66,6 +66,11 @@ dependencies:
   firebase_auth: ^5.1.2
   syncfusion_flutter_charts: ^26.1.42
   flutter_echarts: ^2.5.0
+  youtube: ^2.0.0
+  flutter_html: ^3.0.0-beta.2
+  flutter_html_iframe: ^3.0.0-beta.2
+  youtube_player_flutter: ^9.0.1
+  webview_flutter: ^4.8.0
 
 dev_dependencies:
   flutter_test:
@@ -111,7 +116,7 @@ flutter:
     - assets/ai/hrt.gif
     - assets/ai/watch.png
 
-    - assets/emo/angry.gif
+    - assets/emo/problem.gif
     
 
     - .env
